[gd_scene load_steps=5 format=3 uid="uid://ce0li8rjky50d"]

[ext_resource type="Script" path="res://Scripts/statistics.gd" id="1_a3t1i"]
[ext_resource type="FontFile" uid="uid://1adpblvj8vmo" path="res://Assets/PixelFont.ttf" id="2_q03da"]
[ext_resource type="Texture2D" uid="uid://dwewb2ob3aikj" path="res://Assets/Button.png" id="3_180ru"]
[ext_resource type="Texture2D" uid="uid://cqm4sedw87ttq" path="res://Assets/Cursor.png" id="4_fqda0"]

[node name="Statistics" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_a3t1i")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.329412, 0.368627, 0.498039, 1)

[node name="StatsLabel" type="Label" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -72.0
offset_right = 80.0
offset_bottom = 46.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.443137, 0.682353, 0.54902, 1)
theme_override_fonts/font = ExtResource("2_q03da")
theme_override_font_sizes/font_size = 32
text = "
statistics:

clicking upgrades: 0/1000

automation upgrades: 0/1000"
horizontal_alignment = 1

[node name="BackButton" type="TextureButton" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.35
anchor_top = 0.833333
anchor_right = 0.65
anchor_bottom = 0.944444
grow_horizontal = 2
grow_vertical = 0
action_mode = 0
button_mask = 0
texture_normal = ExtResource("3_180ru")
stretch_mode = 0
metadata/_edit_use_anchors_ = true

[node name="BackLabel" type="Label" parent="BackButton"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.0625001
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.443137, 0.682353, 0.54902, 1)
theme_override_fonts/font = ExtResource("2_q03da")
theme_override_font_sizes/font_size = 32
text = "back"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Cursor" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = 30.0
offset_top = 120.0
offset_right = 46.0
offset_bottom = 136.0
texture = ExtResource("4_fqda0")
expand_mode = 3

[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
